// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.shared.backend;

option java_outer_classname = "JobKeyProto";
option java_package = "com.google.aggregate.protos.shared.backend";

/** Unique identifier for the job, used for identifying entries in the database and Pub/Sub. */
message JobKey {
  /** ID for request tracking. */
  string job_request_id = 1;
}
